--- a/index.html
+++ b/index.html
@@ -1,96 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <title>Young's Profile</title>
+    <style>
+        body {
+            background-color: #050100;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 50px;
+            font-family: 'Roboto', sans-serif;
+        }
 
-  </head>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-    }
+        .profile-picture {
+            width: 128px;
+            height: 128px;
+            border-radius: 50%;
+            border: 5px solid #ffffff;
+        }
 
-    .banner-image {
-      width: 128px;
-      height: 128px;
-      object-fit: cover;
-      border-radius: 128px;
-    }
+        .username {
+            color: #fffffe;
+            font-size: 24px;
+            margin-top: 20px;
+        }
 
-    .thumbnail {
-      width: 48px;
-      height: 48px;
-      border-radius: 48px;
-      object-fit: cover;
-    }
+        .social-link {
+            background-color: #ffffff;
+            color: #000000;
+            text-align: center;
+            padding: 10px 20px;
+            margin: 10px 0;
+            border-radius: 20px;
+            text-decoration: none;
+            font-weight: bold;
+            width: 80%;
+            box-sizing: border-box;
+        }
 
-    body {
-      background-color: #004643;
-    }
-
-    .name {
-      color: #fffffe;
-      display: flex;
-      justify-content: center;
-    }
-
-    .banner {
-      display: flex;
-      justify-content: center;
-    }
-
-    .social-icons {
-      display: flex;
-      justify-content: space-around;
-    }
-
-    .social-icons a {
-      color: #fffffe;
-      text-decoration: none;
-    }
-
-    .link {
-      background-color: #f9bc60;
-      display: flex;
-      align-items: center;
-      padding: 5px;
-    }
-
-    .link a {
-      color: #001e1d;
-      text-decoration: none;
-      text-align: center;
-      flex-grow: 1;
-    }
-
-    .items {
-      display: flex;
-      flex-direction: column;
-      gap: 30px;
-      max-width: 640px;
-      flex-grow: 1;
-    }
-  </style>
-  <body>
-    <div class="banner">
-      <img src="1696048553967.jpeg" alt="Young headshot" class="banner-image">
-    </div>
-
-    <div class="name">
-      Young Song
-    </div>
-
-    <div class="social-icons">
-      <a href="https://github.com/youngsong99" target="_blank">
-        GitHub
-      </a>
-
-      <a href="https://www.linkedin.com/in/youngsong99/" target="_blank">
-        LinkedIn
-      </a>
-
-      <a href="https://www.youngishere.com/" target="_blank">
-        Website
-      </a>
-    </div>
-  </body>
+        .social-links-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+<img src="1696048553967.jpeg" alt="Profile Picture" class="profile-picture">
+<div class="username">@YoungSong</div>
+<div class="social-links-container">
+    <a href="https://github.com/youngsong99" target="_blank" class="social-link">GitHub</a>
+    <a href="https://www.linkedin.com/in/youngsong99/" target="_blank" class="social-link">LinkedIn</a>
+    <a href="https://www.youngishere.com/" target="_blank" class="social-link">Portfolio</a>
+</div>
+</body>
 </html>
