Update: linkedin url update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="username">@YoungSong</div>
 <div class="social-links-container">
     <a href="https://github.com/youngsong99" target="_blank" class="social-link">GitHub</a>
-    <a href="https://www.linkedin.com/in/youngsong99/" target="_blank" class="social-link">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/youngsong_us/" target="_blank" class="social-link">LinkedIn</a>
     <a href="https://www.youngishere.com/" target="_blank" class="social-link">Portfolio</a>
 </div>
 </body>
